# Matjes

./: .gitignore  .project  CITATION.CFF  CMakeLists.txt  Matjes  compile.bash
Matjes/: .cproject  .gitignore  .project  CMakeLists.txt  Imakefile  Makefile  Makefile-mpi  compile.bash  make.sys
Matjes/HPC-scripts/: hlrn.pbs  mogon.pbs  nec.pbs  rzcluster.pbs
Matjes/Libraries/: linear-algebra.f90
Matjes/Makefiles/: Makefile_parallel_workstation  make.sys
Matjes/Movies-script/: image.py  movie-povray.sh  movie.sh  twopanel.py
Matjes/cmake/: Files_and_Targets.cmake  compilerflags.cmake  programoptions.cmake
Matjes/cmake/configlist/: config.cmake_jureca_booster_gfortran  config.cmake_jureca_booster_ifort  config.cmake_majaro_patrick  config.cmake_manjaro
Matjes/inputs/: GNEB.in  dyna.in  gauge.in  init.config  inp  input  lattice.in  minimization.in  read_input.f90  rwskyrmion.in
Matjes/makesys_Wellington/: make.sys_manjaro_laptop  make.sys_wellington
Matjes/src/: CMakeLists.txt  Correlation.f90  CreateSpinFile.f90  Efield_sd.f90  Energy.f90  Energy_density.f90  Heisenberg.f90  Imake.tmpl  InitSpin.f90  MC_fft.f90  MCstep.f90  Makefile  MonteCarlo.f90  Relaxation.f90  SignatureFile.f90  Torana.f90  arrange_neihg.f90  cal_local_energy.f90  calculate_Beff.f90  choosespin.f90  constant.f90  coordinatesv4.f90  demag-matrix.f90  derived_types.f90  error.f90  field_sd.f90  inp_rw.f90  main.f90  mpi_prop.f90  qorien.f90  qorienplot.f90  randist.f90  rw_lattice.f90  rw_skyrmion.f90  sampling.f90  setup_DM.f90  split_work.f90  spstm.F90  store_relaxation.f90  structure.f90  (+5 more)
Matjes/src/AI/: envelope.f90  tracker.f90
Matjes/src/Energy/: CMakeLists.txt  CalculateAverages.f90  DeriveValue.f90  Energy.f90  Energy_density.f90  Energy_distrib.f90  Heisenberg.f90  J_sd_exchange.f90  Makefile  anisotropy_heisenberg.f90  cal_local_energy.f90  cal_local_energy_eigen.f90  cal_local_energy_manual.f90  cal_local_energy_mkl.f90  chemical_potential_TB.f90  couplage_ME.f90  coupling_ME_D.f90  coupling_ME_J.f90  demag-tensor.f90  dipolar-energy.f90  energy_commons.f90  energy_matrix.f90  energy_output_contribution.f90  exchange_Heisenberg.f90  exchange_Heisenberg_D.f90  exchange_Heisenberg_J.f90  exchange_tight_binding.f90  ham_base.f90  ham_coo.f90  ham_dense.f90  ham_manual.f90  ham_public.f90  ham_set_util.f90  ham_sparse_mkl.f90  ham_type.f90  ham_type_coo.f90  ham_type_dense.f90  ham_type_gen.f90  ham_type_manual.f90  ham_type_mkl_coo.f90  (+9 more)
Matjes/src/GNEB/: CMakeLists.txt  gneb.f90  gneb_parameters.f90  gneb_utils.f90  initialize_path.f90  io-gneb.f90  path.f90  tangent.f90
Matjes/src/Hamiltonian_type/: CMakeLists.txt  eigen_H.cpp  eigen_H_interface.f90  ham_base.f90  ham_coo.f90  ham_dense.f90  ham_dense_blas.f90  ham_eigen.f90  ham_public.f90  ham_sparse_mkl.f90
Matjes/src/IO-input/: CMakeLists.txt  check_inputs.f90  ext_param_rw.f90  inp_rw.f90  input_H_types.f90  input_types.f90  (+10 more)
Matjes/utils/: iso-Sk.nb  plot-Q.nb  solver-SIB.nb  spin.pov  test-dipole.nb
(+751 files in other folders)
